spade-tests/src/snapshots/spade_tests__const_generics__shr_fails_when_rhs_is_big.snap
---
source: spade-tests/src/const_generics.rs
---
fn foo<#uint N>() -> uint<{N >> 100_000}> {0}
fn test() {
    let _ = foo::<20>();
}


error: Shift amount too large
  ┌─ testinput:1:28
  │
1 │ fn foo<#uint N>() -> uint<{N >> 100_000}> {0}
  │                            ^^^^^^^^^^^^ `100000` is over `65535`
2 │ fn test() {
3 │     let _ = foo::<20>();
  │             ----------- The error occurred when unifying types here
